--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   background-color: red;
 }
 
-.navbar div {
-  background-color: #f1f1f1;
-  width: 100px;
-  margin: 10px;
-  line-height: 75px;
-  font-size: 50px;
+.navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
+
+.navbar a:hover {
+  background: #00FF00;
+  color: black;
 </style>
 </head>
 <body>
@@ -29,3 +35,4 @@
 
 </body>
 </html>
+
